--- a/terraform/scripts/cloud-init.yml
+++ b/terraform/scripts/cloud-init.yml
@@ -10,6 +10,7 @@ ssh_pwauth: false
 
 timezone: ${timezone}
 packages:
+  - apt-config-auto-update  # https://linuxcapable.com/how-to-configure-unattended-upgrades-on-ubuntu-linux/
   - apt-transport-https
   - ca-certificates
   - curl
@@ -18,6 +19,7 @@ packages:
   - gnupg-agent
   - jq
   - software-properties-common
+  - unattended-upgrades
 
 # Enable ipv4 forwarding, required on CIS hardened machines
 write_files:
@@ -40,10 +42,13 @@ users:
 
 # Install Docker, for production, consider pinning to stable versions
 runcmd:
+  - echo "Installing docker"
   - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
   - add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
   - apt-get update -y
   - apt-get install -y docker-ce docker-ce-cli containerd.io
   - systemctl start docker
   - systemctl enable docker
+  - echo "Configuring unattended upgrades"
+  - dpkg-reconfigure unattended-upgrades
 
